--- a/userChrome.css
+++ b/userChrome.css
@@ -21,3 +21,8 @@
   display: none !important;
 }
 */
+
+@import url(custom/chrome/hide_list_all_tabs.css);
+@import url(custom/chrome/container_line_under_icon.css);
+@import url(custom/chrome/oneline_layout.css);
+@import url(custom/chrome/private_icon_as_menu.css);
