hide menubar in oneline layout

--- a/custom/chrome/oneline_layout.css
+++ b/custom/chrome/oneline_layout.css
@@ -74,6 +74,10 @@ margin-left : var(--navbarWidth) !important;
 margin-right: calc(100vw - var(--navbarWidth)) !important;
 }*/
 
+#toolbar-menubar {
+  display: none !important;
+}
+
 #nav-bar {
   margin-left: calc(100vw - var(--navbarWidth)) !important;
 }
