--- a/custom/chrome/oneline_layout.css
+++ b/custom/chrome/oneline_layout.css
@@ -1,197 +1,80 @@
-/* S E T T I N G S */
-
 :root {
-  --navbarWidth     : 500px; /* Set width of navbar. Use px for a fixed width
-  or vw for a percentage of your window. */
-  --animationSpeed  : 0.15s;
+  --navbar-width: 500px;
+  --tabbar-min-width: 300px;
+  --urlbar-expand-side-margin: 12px;
+  --tab-block-margin: 2px !important;
+  --toolbar-start-end-padding: 4px !important;
 }
 
-element {
-  --urlbar-height: 32px;
-  --urlbar-toolbar-height: 36px;
-}
-
-/* #navigator-toolbox { */
-/*   background-color: var(--lwt-accent-color) !important; */
-/* } */
-
-
-/* H I D I N G   E L E M E N T S */
-/* Comment or uncomment depending of what elements you want to hide */
-
-/* Back button */
-#back-button { display: none !important }
-
-/* Hide back and forward button only when disabled */
-/* TODO: figure out a way */
-
-/* Forward button */
-#forward-button { display: none !important }
-
-/* Hide forward button only when disabled */
-/* #forward-button[disabled="true"] { display: none !important } */
-
-/* "Shield" icon */
-#tracking-protection-icon-container { display: none !important }
-
-/* Site information button */
-/* #identity-box { display: none !important } */
-
-/* This is the "Search with" indicator on the urlbar */
-/* #urlbar-search-mode-indicator { display: none !important } */
-
-/* Zoom button */
-#urlbar-zoom-button { display: none !important }
-
-/* Page action (right three dash button) */
-/* #pageActionButton { display: none !important } */
-
-/* These are the buttons on the right of the urlbar */
-#page-action-buttons>hbox:not(#star-button-box) { display: none !important }
-
-/* #urlbar-label-box { display: none !important } */
-
-/* This one is the hamburger menu! */
-/* CAUTION: if you hide this some popups may be bugged */
-/* #PanelUI-button { display: none !important } */
-
-/* Tab close button */
-/* .tab-close-button { display: none !important } */
-
-/* Enable this to show the tab close button when hovering the tab */
-/* .tabbrowser-tab:hover .tab-close-button { display: -moz-inline-box !important } */
-
-/*============================================================================*/
-
-
-/* Oneline tweak */
-
-/*#TabsToolbar {
-margin-left : var(--navbarWidth) !important;
-}
-
-#nav-bar {
-margin-right: calc(100vw - var(--navbarWidth)) !important;
-}*/
-
-#toolbar-menubar {
+/* simplify interfaces */
+#toolbar-menubar,
+.titlebar-spacer,
+#back-button,
+#forward-button,
+#urlbar-zoom-button,
+#page-action-buttons > hbox:not(#star-button-box),
+#tracking-protection-icon-container {
   display: none !important;
 }
 
-#nav-bar {
-  margin-left: calc(100vw - var(--navbarWidth)) !important;
-}
-
-#nav-bar[urlbar-exceeds-toolbar-bounds="true"] {
-  margin-left: 2px !important;
-}
-
-#TabsToolbar {
-  margin-right: var(--navbarWidth) !important;
+#pinned-tabs-container {
+  margin-inline-end: 0px !important;
 }
 
 #urlbar-container {
-  width: auto !important;
-  height: 100% !important;
+  padding-inline-start: 0px !important;
 }
 
-#urlbar[breakout][breakout-extend] {
-  left: 0px !important;
-  width: 100% !important;
-  margin-top: 6px !important;
-}
-
-#urlbar[breakout][breakout-extend] > #urlbar-input-container {
-  height: var(--urlbar-height) !important;
-  padding-top: 0px !important;
-  padding-bottom: 0px !important;
-  padding-right: 0px !important;
-}
-
-#urlbar-container {
-  min-width   : 0px !important;
-}
-
-:root[uidensity="compact"] #nav-bar {
-  margin-top  : -37px !important;
-  height      : 37px !important;
-}
-
-:root:not([uidensity="compact"]):not([uidensity="touch"]) #nav-bar {
-  margin-top  : -44px !important;
-  height      : 44px !important;
-}
-
-:root[uidensity="touch"] #nav-bar {
-  margin-top  : -49px !important;
-  height      : 49px !important;
-}
-
-
-/* Dragging space */
-:root[sizemode="maximized"] #TabsToolbar {
-  margin-top: 0px;
-}
-
-#TabsToolbar {
-  margin-top: 0px;
-}
-
-
-/* Simplifying interface */
-
-#nav-bar {
-  background  : none !important;
-  box-shadow  : none !important;
-}
-
+/* flex layout of tool bar */
 #navigator-toolbox {
-  border      : none !important;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: center !important;
+  flex-wrap: wrap !important;
+  border: none !important;
 }
 
-.titlebar-spacer {
-  display     : none !important;
+#TabsToolbar {
+  order: 1;
+  flex: 1 1 auto !important;
+  min-width: var(--tabbar-min-width) !important;
 }
 
-#urlbar-background {
-  border      : none !important;
+#nav-bar {
+  order: 2;
+  flex: 0 1 var(--navbar-width) !important;
+  background: none !important;
+  box-shadow: none !important;
+  max-width: var(--navbar-width) !important;
 }
 
-#urlbar:not(:hover):not([breakout][breakout-extend]) > #urlbar-background {
-  box-shadow  : none !important;
-  background  : none !important;
+#PersonalToolbar {
+  order: 3;
+  flex: 1 1 100% !important;
 }
 
-
-/* Hide urlbar elements when not active */
-
-.urlbar-icon:not(#star-button), #userContext-indicator, #userContext-label {
-  fill        : transparent !important;
-  background  : transparent !important;
-  color       : transparent !important;
+/* push navigation bar to second row when browser width is too small */
+@media (max-width: 800px) {
+  #nav-bar {
+    flex: 1 1 100% !important;
+    max-width: 100% !important;
+    min-width: 0 !important;
+    margin-left: 0 !important;
+  }
 }
 
-#urlbar:hover .urlbar-icon,
-#urlbar:active .urlbar-icon,
-#urlbar[focused] .urlbar-icon {
-  fill        : var(--toolbar-color) !important;
+/* expand navigation bar to full width when tab bar are hidden */
+#navigator-toolbox[tabs-hidden] #nav-bar,
+#TabsToolbar[collapsed] ~ #nav-bar {
+  flex: 1 1 100% !important;
+  max-width: 100% !important;
+  min-width: 0 !important;
+  margin-left: 0 !important;
 }
 
-
-/* animations */
-.subviewbutton,
-#nav-bar,
-#urlbar-background,
-.urlbar-icon,
-#userContext-indicator,
-#userContext-label,
-.urlbar-input-box,
-#identity-box,
-#tracking-protection-icon-container,
-[anonid=urlbar-go-button],
-.urlbar-icon-wrapper,
-#tracking-protection-icon,
-#identity-box image,
-stack {
-  transition  : var(--animationSpeed) !important;
+/* extend URL bar to full width when clicked */
+#urlbar[breakout][breakout-extend] {
+  left: var(--urlbar-expand-side-margin) !important;
+  margin-left: 0px !important;
+  width: calc(100% - 2 * var(--urlbar-expand-side-margin)) !important;
 }
