change reader view dark theme background

--- a/custom/content/reader_view.css
+++ b/custom/content/reader_view.css
@@ -1,4 +1,7 @@
 @-moz-document url-prefix("about:reader") {
+  :root {
+    --dark-theme-background: #1F2228 !important;
+  }
   body * {
     font-family: sans-serif !important;
   }
