hide visual search green "new" indicator

--- a/userChrome.css
+++ b/userChrome.css
@@ -26,3 +26,4 @@
 @import url(custom/chrome/container_line_under_icon.css);
 @import url(custom/chrome/oneline_layout.css);
 @import url(custom/chrome/private_icon_as_menu.css);
+@import url(custom/chrome/hide_visual_search_indicator.css);
