add corner radius adjustment

--- a/userChrome.css
+++ b/userChrome.css
@@ -27,3 +27,4 @@
 @import url(custom/chrome/oneline_layout.css);
 @import url(custom/chrome/private_icon_as_menu.css);
 @import url(custom/chrome/hide_visual_search_indicator.css);
+@import url(custom/chrome/corner_radius.css);
